# mini-ip-command-tool

./: CMakeLists.txt  README.md
backend/windows/: WindowsNetwork.cpp  WindowsNetwork.h
docs/: IMPLEMENTATION_NOTES.md
scripts/: build_windows.ps1  install_deps.sh
src/: main.cpp
src/backend/linux/: LinuxNetwork.cpp  LinuxNetwork.h
src/backend/windows/: WindowsNetwork.cpp  WindowsNetwork.h
src/cli/: cli.cpp  cli.h
src/core/: BackendFactory.cpp  DNSResolver.cpp  IPManager.cpp  Utils.cpp
src/include/: BackendFactory.h  DNSResolver.h  INetworkBackend.h  IPManager.h  Utils.h
tests/: CMakeLists.txt  test_ipmanager.cpp
